--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
 [project]
 name = "algotrader"
 version = "0.1.0"
-description = "Lumibot trading bot using Alpaca for data and IBKR for execution"
+description = "Machine learning trading bot using Alpaca for data and IBKR for execution"
 dependencies = [
-    "lumibot",
     "alpaca-py",
     "ib_async",
     "pandas",
